# MVVMSample

./: .gitignore  README.md
OpenFile/: Log.cpp  Log.hpp  OpenFile.sln  OpenFile.vcxproj  OpenFile.vcxproj.filters  Papyrus.cpp  Papyrus.h  SANS.h  SANSCallback.h  ScopedTask.hpp  ScopedTaskScopeImpl.cpp  ScopedTaskScopeImpl.hpp  fucked.cpp  main.cpp
src/: CMakeLists.txt  CMakeSettings.json
src/test/: CMakeLists.txt  test.cpp  test.json
src/test/framework/: CMakeLists.txt  test.cpp  test_helper.cpp  test_helper.hpp
src/test/framework/AsyncProperty/: test.hpp
src/test/framework/MemoryPool/: test.hpp  test_helper.hpp
src/test/framework/ScopedTaskRunner/: test.hpp  test_helper.hpp
src/test/framework/StaticString/: test.hpp
src/test/framework/StaticVector/: test.hpp
